[package]
name = "escrow_p"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version="1.23.1", features=["derive","const_zeroed"]}
mollusk-svm = "0.4.1"

pinocchio = "0.9.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"

solana-sdk = "2.3.1"


[lib]
crate-type = ["lib","cdylib"]


