[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []

[dependencies]
anchor-spl = { version = "0.31.1", features = ["token"] }
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[dev-dependencies]
mollusk-svm = "=0.0.15"
solana-program = "~2.1"
