[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []

[dependencies]
anchor-spl = { version = "0.31.1", features = ["token"] }
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-sdk = "2.2"
litesvm-testing = { version = "0.2.0", features = ["anchor"] }

[dev-dependencies]
solana-program = "~2.2"
litesvm = "0.6.1"
