[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = {version="0.31.0",features=["init-if-needed"]}
anchor-spl = {version="0.31.1",features=["token"]}
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }

[dev-dependencies]
mollusk-svm = "=0.0.15"
solana-program = "~2.1"

