[package]
name = "magi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version="0.31.0", features=["init-if-needed"]}
ephemeral-rollups-sdk = { version = "0.2.6", features = ["anchor"] }

