[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version="0.31.0",fetures=["init-if-needed"]}
anchor-spl = {version="0.31.1", features=["metadata"]}

[dev-dependencies]
litesvm = "0.6.1"
litesvm-testing = { git = "https://github.com/levicook/litesvm-testing" }

